[package]
name = "const_qoi"
version = "1.0.0"
edition = "2021"
rust-version = "1.78" # initial development
license = "ISC"
description = "A safe, 0 dependency, no_std streaming decoder/encoder library for the QOI (Quite Okay Image) format."
authors = ["Mathew John Roberts <auronandace@duck.com>"]
categories = ["no-std", "no-std::no-alloc", "multimedia::encoding", "multimedia::images"]
keywords = ["no-std", "qoi", "image", "encoding"]
readme = "README.md"
exclude = ["target", "Cargo.lock"]
documentation = "https://docs.rs/const_qoi"
repository = "https://github.com/auronandace/const_qoi"
homepage = "https://github.com/auronandace/const_qoi"

[lib]
name = "const_qoi"
path = "src/lib.rs"

[dependencies]
